# usb_midiflower

./: .gitignore  CMakeLists.txt  README.md  memmap_usb_midiflower.ld  update_www_app.ps1
lib/lwip-2.1.3/src/: Filelists.cmake
lib/lwip-2.1.3/src/apps/http/makefsdata/: CMakeLists.txt
reactconfig/flower/: package-lock.json  package.json
reactconfig/flower/public/config/data/: data.json  datadev.json
reactconfig/flower/public/config/param/: channeldev.json  paramdev.json
reactconfig/flower/public/config/setdata/: data
reactconfig/flower/src/: App.css  App.js  Layout.js
reactconfig/flower/src/pages/: Channels.js  Data.js  Home.js  NoPage.js  Parameters.js  devdetect.js
reactconfig/flower/src/pages/Component/: Channel.js
src/: MidiFlowerSequencer.cpp  MidiFlowerSequencer.h  config.c  config.h  flower_activity.c  flower_activity.h  flower_music.cpp  flower_music.h  flower_sensor.cpp  flower_sensor.h  lwipopts.h  main.cpp  tusb_config.h  usb_descriptors.c  usb_lwip.c  usb_lwip.h  usb_midiflower.cpp  usb_midiflower.h
src/BOARD/: board.h
src/HAL/: crc_hal.c  crc_hal.h  gpio_hal.c  gpio_hal.h  gpio_pwm_hal.c  gpio_pwm_hal.h  led_hal.c  led_hal.h  timer_hal.c  timer_hal.h
src/HARD/: WS2812.cpp  WS2812.hpp  crc.c  crc.h  led.c  led.h  pwm.c  pwm.h
src/HTTP/: http_server.cpp  http_server.h
src/MIDI/: midi.cpp  midi.h  midinote.h  midisequencer.cpp  midisequencer.h  sequence.cpp  sequence.h
src/TOOLS/: utils.c  utils.h
www/: fsdata.c
www/fs/: 404.html  asset-manifest.json  index.html
www/fs/config/data/: data.json  datadev.json  empty.json
www/fs/config/param/: channel.json  channeldev.json  param.json  paramdev.json
www/fs/static/css/: main.3d83b7ea.css  main.87bcb263.css  main.bf741122.css  main.bf741122.css.map  main.d3e99f0a.css  main.fe3677bd.css
www/fs/static/js/: 27.ae543a26.chunk.js  787.e754e478.chunk.js  787.e754e478.chunk.js.map  main.0cbcc007.js  main.313a3fe9.js  main.313a3fe9.js.LICENSE.txt  main.319fde9c.js  main.3f89f13f.js  main.44518348.js  main.44518348.js.map  main.46a4bc07.js  main.783a40bc.js  main.8f13315e.js  main.9df92ecd.js  main.b11b23e2.js  main.b11b23e2.js.LICENSE.txt  main.b77563d4.js  main.bf363637.js  main.e3ddd7f7.js  main.f166d7bc.js
